<resources>
    <string name="app_name">Android-Proj</string>
    <string name="intro_title">Make \nYour Style \nCome \nTrue Here</string>
    <string name="go">GO</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="recommendation">Recommendation</string>
    <string name="see_all">See all</string>
    <string name="todo">TODO</string>
    <string name="_0">$0</string>
    <string name="_5">5</string>
    <string name="title">title</string>
    <string name="title_main">title</string>
    <string name="_0_main">$0</string>
    <string name="_0_main2">$0</string>
    <string name="plus">+</string>
    <string name="subtraction">-</string>
    <string name="_quantity">1</string>
    <string name="select_color">Select Color</string>
    <string name="select_size">Select Size</string>
    <string name="total_price">Total Price</string>
    <string name="buy_now">Buy Now</string>
    <string name="order_detail">Order Detail</string>
    <string name="your_cart_is_empty">Your Cart Is Empty</string>
    <string name="check_out">Check Out</string>
    <string name="subtotal">Subtotal</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="total_tax">Total Tax</string>
    <string name="total">Total</string>
    <string name="wish_list_is_empty">Wish List Is Empty</string>
    <string name="you_wish_list">You Wish list</string>
    <string name="profile_title">Profile title</string>
    <string name="username_placeholder">Username Placeholder</string>
</resources>